# models/order_status.go
@@ -1,0 +1,7 @@
+package models
+
+type OrderStatus struct {
+	ID         int    `json:"id"`
+	PurchaseID int    `json:"purchase_id"`
+	Status     string `json:"status"`
+}
